Fix done text overflow dashed border
Hidden due to quirks of overflow

See: https://stackoverflow.com/questions/6421966/css-overflow-x-visible-and-overflow-y-hidden-causing-scrollbar-issue

--- a/src/components/done-text/_style.scss
+++ b/src/components/done-text/_style.scss
@@ -1,5 +1,9 @@
 .done-text {
 	outline: none;
-	overflow: hidden;
+	overflow-y: visible;
+}
+
+.done-text__overflow {
+	overflow-x: hidden;
 	text-overflow: ellipsis;
 }
